--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "DXTROX",
   "description": "Lightweight WhatsApp Bot",
-  "repository": "https://github.com/amal-dx/DXTROX-",
+  "repository": "https://github.com/amal-dx/Alphab0t11",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
   "keywords": [
     "bot",
